# crypto

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  build.rs  mkdocs.yml  requirements.txt  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml  doc.yml  lint.yml  no-std.yml  test.yml
arch/arm64-sve/: CMakeLists.txt  library.h  test.c
arch/arm64-sve/rpo/: library.c  rpo_hash.h  rpo_hash_256bit.h
benches/: README.md  dsa.rs  hash.rs  merkle.rs  merkle_tree.rs  parallel-subtree.rs  smt-mutations.rs  smt-subtree.rs  smt-with-entries.rs  smt.rs  store.rs  subtree.rs
c_code/: .clang-format
c_code/src/: main.c  test_sve.c  test_sve.h
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/hash/: mod.rs
crypto/src/hash/rpo/: digest.rs  mds_freq.rs  mod.rs  tests.rs
crypto/src/merkle/: merkle_path_set.rs  merkle_tree.rs  mod.rs
docs/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: smt.rs
miden-crypto/: Cargo.toml
miden-crypto-fuzz/: Cargo.toml
miden-crypto-fuzz/fuzz_targets/: smt.rs
miden-crypto/arch/arm64-sve/rpo/: library.c  rpo_hash_128bit.h
miden-crypto/benches/: README.md  hash.rs  merkle.rs  smt.rs
miden-crypto/src/: lib.rs  main.rs
miden-crypto/src/dsa/rpo_falcon512/: hash_to_point.rs  mod.rs  signature.rs
miden-crypto/src/hash/: mod.rs
miden-crypto/src/hash/blake/: mod.rs  tests.rs
miden-crypto/src/hash/rescue/: mod.rs  tests.rs
miden-crypto/src/merkle/: empty_roots.rs  error.rs  index.rs  merkle_tree.rs  mod.rs  path.rs  sparse_path.rs
miden-crypto/src/merkle/mmr/: bit.rs  delta.rs  forest.rs  full.rs  mod.rs  partial.rs  peaks.rs  proof.rs  tests.rs
miden-crypto/src/merkle/partial_mt/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/: mod.rs  partial.rs
miden-crypto/src/merkle/store/: tests.rs
miden-crypto/src/rand/: rpo.rs  rpx.rs
miden-crypto/src/utils/: mod.rs
src/: bit.rs  data.rs  lib.rs  main.rs  utils.rs  word.rs
src/dsa/: mod.rs
src/dsa/falcon/: mod.rs  shake256.rs
src/dsa/falcon/falcon_c/: inner.h  tmp.rs
src/dsa/falcon/structs/: kp.rs  pk.rs  poly.rs  sig.rs  sk.rs
src/dsa/falcon512/: hash_to_point.rs  mod.rs  signature.rs
src/dsa/falcon512/keys/: mod.rs  public_key.rs  secret_key.rs
src/dsa/falcon512/math/: codec.rs  ffsampling.rs  fft.rs  mod.rs  polynomial.rs  samplerz.rs
src/dsa/rpo_falcon512/: error.rs  ffi.rs  hash_to_point.rs  keys.rs  mod.rs  polynomial.rs  signature.rs  tests.rs
src/dsa/rpo_stark/: mod.rs
src/gkr/: mod.rs
src/gkr/circuit/: mod.rs
src/gkr/multivariate/: eq_poly.rs  mod.rs
src/gkr/sumcheck/: mod.rs  prover.rs  tests.rs  verifier.rs
src/gkr/utils/: mod.rs
src/hash/: mod.rs
src/hash/blake/: mod.rs  tests.rs
src/hash/rescue/: mod.rs  tests.rs
src/hash/rpo/: digest.rs  mds_freq.rs  mod.rs  tests.rs
src/merkle/: delta.rs  empty_nodes.rs  empty_roots.rs  error.rs  index.rs  merkle_path_set.rs  merkle_tree.rs  mod.rs  node.rs  partial_merkle_tree.rs  path.rs  path_set.rs  smt.rs  sparse_merkle_tree.rs  store.rs
src/merkle/mmr/: accumulator.rs  bit.rs  delta.rs  error.rs  forest.rs  full.rs  inorder.rs  mod.rs  partial.rs  peaks.rs  proof.rs  tests.rs
src/merkle/new_smt/: mod.rs
src/merkle/partial_mt/: mod.rs  tests.rs
src/merkle/simple_smt/: mod.rs  tests.rs
src/merkle/smt/: mod.rs  parallel.rs  partial.rs  tests.rs
src/merkle/store/: mod.rs  tests.rs
src/merkle/tiered_smt/: bits.rs  constants.rs  content.rs  error.rs  index.rs  leaf.rs  mod.rs  nodes.rs  path.rs  proof.rs  storage.rs  tests.rs  values.rs
src/rand/: mod.rs  rpo.rs  rpx.rs
src/utils/: diff.rs  kv_map.rs  mod.rs
sve/: Makefile
sve/src/: inv_sbox.c  inv_sbox.h  sve_inv_sbox.c  test.c
(+65 files in other folders)
