[workspace]
members = [
    "miden-crypto"
]
resolver = "2"  # Use the edition 2021 dependency resolver

[workspace.package]
authors = ["miden contributors"]
license = "MIT"
repository = "https://github.com/0xPolygonMiden/crypto"
documentation = "https://docs.rs/miden-crypto"
categories = ["cryptography", "no-std"]
keywords = ["miden", "crypto", "hash", "merkle"]
edition = "2021"
rust-version = "1.84"
