[workspace]
members = [
    "miden-crypto"
]
exclude = [
    "miden-crypto-fuzz"
]
resolver = "3"  # Use the edition 2024 dependency resolver

[workspace.package]
authors = ["miden contributors"]
license = "MIT"
repository = "https://github.com/0xPolygonMiden/crypto"
categories = ["cryptography", "no-std"]
keywords = ["miden", "crypto", "hash", "merkle"]
edition = "2024"
rust-version = "1.85"

