[package]
name = "miden-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
miden-crypto = { path = "..", features = ["concurrent"] }
rand = { version = "0.8", default-features = false }

[[bin]]
name = "smt"
path = "fuzz_targets/smt.rs"
test = false
doc = false
bench = false
